# cargo-component

./: Cargo.toml  README.md
crates/bindings/: Cargo.toml
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
src/: bindings.rs  lib.rs
src/commands/: new.rs
tests/: build.rs  publish.rs  update.rs
