[package]
name = "cargo-component-macro"
version = "0.1.0"
edition = "2021"
authors = ["Peter Huene <peter@huene.dev>"]
description = "A proc-macro for generating bindings of WebAssembly components."
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cargo-component-bindings"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "components", "component model"]
repository = "https://github.com/bytecodealliance/cargo-component"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.64"
quote = "1.0.29"
syn = "2.0.25"
wit-bindgen-core = { git = "https://github.com/peterhuene/wit-bindgen", branch = "runtime-path" }
wit-bindgen-rust = { git = "https://github.com/peterhuene/wit-bindgen", branch = "runtime-path" }
wit-component = "0.12.0"
